Build JSON of library and use it to chance song